fixed some bullshit spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,10 @@ body {
   background-image: url("../assets/xzayvion.svg"), url("../assets/chris.svg"); /*setting the background to me and chris*/
   background-size: contain, contain;
   background-repeat: no-repeat;
-  background-position: left -50% center, right -50% center;
+  background-position: calc(50% - 50vw + 600px) center, calc(50% + 50vw - 600px) center;
   min-height: 100vh;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 2000px;
 }
 h1 {
     text-align: center;
@@ -40,8 +41,4 @@ h2 {
 audio {
   display: block; /* Makes margin: auto work */
   margin: 0 auto; /* Centers horizontally */
-}
-
-.xzayvion {
-  
 }
